src/ui/snapshots/proqi__ui__app__screenshot__snapshot_tests__screenshot_pause_acknowledged_shallow.snap
---
source: src/ui/app/screenshot/tests.rs
assertion_line: 193
expression: "acknowledged_pause_snapshot(62, 6)"
---
00│  active│
01││
02│                         + New thought│
03│  screenshot-ui│
04│  1 thought · board · saved · inbox paused · inactive│
05│  n New   y Copy  x Cut  d/Del  Space Select u Undo│
