src/ui/snapshots/proqi__ui__app__screenshot__snapshot_tests__screenshot_pause_acknowledged_wide.snap
---
source: src/ui/app/screenshot/tests.rs
assertion_line: 177
expression: "acknowledged_pause_snapshot(82, 12)"
---
00││
01│  active│
02││
03│                                   + New thought│
04││
05││
06││
07││
08││
09│  screenshot-ui│
10│  1 thought · board · saved · inbox paused · inactive│
11│  n New   y Copy  x Cut  d/Del  Space Select / Search  : Commands  ? Shortcuts│
