src/ui/snapshots/proqi__ui__app__screenshot__snapshot_tests__screenshot_paused_narrow.snap
---
source: src/ui/app/screenshot/tests.rs
assertion_line: 61
expression: "paused_snapshot(38, 10)"
---
00││
01│⋮ active│
02││
03│             + New thought│
04││
05││
06│  Screenshot Inbox paused after 20 m│
07│  screenshot-ui│
08│  1 · board · saved · inbox paused│
09│  n New   : Commands  ? Shortcuts│
