src/ui/snapshots/proqi__ui__app__screenshot__snapshot_tests__screenshot_paused_shallow.snap
---
source: src/ui/app/screenshot/tests.rs
assertion_line: 168
expression: "paused_snapshot(62, 6)"
---
00│⋮ active│
01││
02│  Screenshot Inbox paused after 20 minutes without activity│
03│  screenshot-ui│
04│  1 thought · board · saved · inbox paused · inactive│
05│  n New   y Copy  x Cut  d/Del  Space Select / Search│
