src/ui/snapshots/proqi__ui__app__screenshot__snapshot_tests__screenshot_paused_wide.snap
---
source: src/ui/app/screenshot/tests.rs
assertion_line: 154
expression: "paused_snapshot(82, 12)"
---
00││
01│⋮ active│
02││
03│                                   + New thought│
04││
05││
06││
07││
08│  Screenshot Inbox paused after 20 minutes without activity│
09│  screenshot-ui│
10│  1 thought · board · saved · inbox paused · inactive│
11│  n New   y Copy  x Cut  d/Del  Space Select / Search  : Commands  ? Shortcuts│
