src/ui/snapshots/proqi__ui__app__screenshot__snapshot_tests__screenshot_takeover_shallow.snap
---
source: src/ui/app/screenshot/tests.rs
assertion_line: 48
expression: "takeover_snapshot(62, 6)"
---
00│┌ screenshot inbox in use ─────────────────────────────────[x]│
01││                                                            ││
02││› Cancel                                                    ││
03││  Take over                                                 ││
04│└────────────────────────────────────────────────────────────┘│
05│  n New   y Copy  x Cut  d/Del  Space Select / Search│
